fix: [PD-397] Recent Search alignment and font family changes

--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -155,7 +155,7 @@ main {
   }
 
   #search-field {
-    width: 185px;
+    width: 178px;
     height: 30px;
     border: none;
     margin-top: 5px !important;
